--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -41,7 +41,7 @@
             <li><a href="{% url 'cohort_list' %}">Cohorts</a></li>
         </ol>
     {% endif %}
-    <h1 class="page-header pull-left">Create Cohort</h1>
+    <h1 class="page-header pull-left">Create Cohort - Filters</h1>
     {% if workbook %}
         <button class="btn btn-primary pull-right" data-toggle="modal" data-target="#create-cohort-modal">Apply to Worksheet</button>
     {% elif create_workbook %}
