-> #1652: actual cohort creation, change 'samples' to 'barcodes', add link on cohort list page and main menu, get workbook/worksheet cohort creation hooked in

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -458,6 +458,7 @@
 
 #cohort-apply-to-workbook
     .btn
+        margin-top: 10px
         margin-right: 10px
 
 .bq-name
@@ -492,6 +493,12 @@
         width: 50%
     hr
         border-color: $isb-primary
+
+.new-cohort
+    margin-top: 10px
+    h5
+        display: inline
+
 span.code
     font-family: monospace
     font-weight: 600
