--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -328,7 +328,12 @@
                     {% endif %}
                     <li class="menu-item"><a href="{% url 'cohort_list' %}">Manage Saved Cohorts ( {{ user.cohort_perms_set.all|active:'cohort'|cohort_owner_permission|length }} )</a></li>
                     <li class="menu-item"><a href="{% url 'public_cohort_list' %}">Public Cohorts ( {% public_cohort_count %} )</a></li>
-                    <li class="menu-item"><a href="{% url 'cohort' %}">Create new Cohort</a></li>
+                    <li class="menu-item has-drop-down__more"> Create a New Cohort
+                        <ul class="drop">
+                            <li class="menu-item"><a href="{% url 'cohort' %}">Filters</a></li>
+                            <li class="menu-item"><a href="{% url 'cohort_barcodes' %}">Barcodes</a></li>
+                        </ul>
+                    </li>
                     <li class="menu-item"><a href="{% url 'cohort_select_for_new_workbook' %}">Select Cohort for a New Workbook</a></li>
                 </ul>
             </li>
