-> #2057, 'controlled access dataset' -> 'controlled dataset'

--- a/templates/GenespotRE/gcp_detail.html
+++ b/templates/GenespotRE/gcp_detail.html
@@ -109,7 +109,7 @@
                                             <div class="modal-body">
                                                 {% csrf_token %}
                                                 <p>
-                                                    <em>Note</em>: By unregistering this Service Account, you are only revoking its access to controlled access datasets.
+                                                    <em>Note</em>: By unregistering this Service Account, you are only revoking its access to controlled datasets.
                                                 </p>
                                             </div>
                                             <div class="modal-footer">
