-> For #1652, max length on the text area

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -480,6 +480,7 @@
         width: 90%
         max-width: 90%
         height: 175px
+        margin-top: 10px
     button
         display: inline-block
         &.instructions
