-> More edits per #2057

--- a/templates/GenespotRE/user_detail_saml.html
+++ b/templates/GenespotRE/user_detail_saml.html
@@ -66,7 +66,7 @@
                 <div class="modal-body">
                     <p>
                         This will remove your access to any controlled datasets. In addition, service accounts from Google Cloud Projects you are associated with
-                        which were accessing controlled data will also lose their access to controlled datasets.
+                        which were accessing controlled data will also lose their access.
                     </p>
                 </div>
                 <form id="unlink-nih-account" method="GET" action="{% url 'unlink_accounts' %}">
