-> #1652: disable file upload button while barcode verification is pending, and show a 'verifying' spinning icon -> #1652: valid/invalid barcode sets now have a max size of 700px displayed ad will scroll when needed

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -494,6 +494,9 @@
         width: 50%
     hr
         border-color: $isb-primary
+    pre
+        overflow-y: auto
+        max-height: 700px
 
 .new-cohort
     margin-top: 10px
