--- a/templates/cohorts/new_cohort_barcodes.html
+++ b/templates/cohorts/new_cohort_barcodes.html
@@ -87,6 +87,9 @@
                                 <div id="uploading" class="collapse" style="margin-left: 20px;">
                                     <i class="fa fa-circle-o-notch fa-spin"></i>  <span id="selected-file-name"></span>
                                 </div>
+                                <div id="verify-pending" class="collapse" style="margin-left: 20px; display: none;">
+                                    <i class="fa fa-circle-o-notch fa-spin"></i>  Verifying barcodes...
+                                </div>
                             </div>
                             <div class="barcode-status" style="display: none;">
                                 <hr>
