-> Implemented #2085, a spinning circle to indicate saving/editing a cohort is underway -> Adjusted 'verify pending' spinner display to be inline

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -497,6 +497,10 @@
         overflow-y: auto
         max-height: 700px
 
+#saving-cohort, #verify-pending
+    margin-left: 20px
+    display: inline
+
 .new-cohort
     margin-top: 10px
     h5
