--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -317,6 +317,9 @@
                         {% csrf_token %}
                         <input type="submit" value="Save Changes" class="btn btn-primary" />
                         <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
+                        <div id="saving-cohort" class="collapse" style="display: none;">
+                            <i class="fa fa-circle-o-notch fa-spin"></i>  Saving Cohort...
+                        </div>
                     </div>
                 </form>
             </div>
