--- a/templates/cohorts/new_cohort_barcodes.html
+++ b/templates/cohorts/new_cohort_barcodes.html
@@ -280,6 +280,9 @@ TARGET-51-PAJMFS,"", "TARGET"</pre>
                     <div class="modal-footer">
                         {% csrf_token %}
                         <input type="submit" value="Create Cohort" class="btn btn-primary" />
+                        <div id="saving-cohort" class="collapse" style="display: none;">
+                            <i class="fa fa-circle-o-notch fa-spin"></i>  Saving Cohort...
+                        </div>
                     </div>
                 </form>
             </div>
