-> Added 'verifying barcodes' notice to barcode entry tab

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -497,7 +497,7 @@
         overflow-y: auto
         max-height: 700px
 
-#saving-cohort, #verify-pending
+#saving-cohort, .verify-pending
     margin-left: 20px
     display: inline
 
