--- a/templates/cohorts/new_cohort_barcodes.html
+++ b/templates/cohorts/new_cohort_barcodes.html
@@ -112,7 +112,7 @@ TARGET-51-PAJMFS,"", "TARGET"</pre>
                                 <div id="uploading" class="collapse" style="margin-left: 20px;">
                                     <i class="fa fa-circle-o-notch fa-spin"></i>  <span id="selected-file-name"></span>
                                 </div>
-                                <div id="verify-pending" class="collapse" style="margin-left: 20px; display: none;">
+                                <div class="collapse verify-pending" style="display: none;">
                                     <i class="fa fa-circle-o-notch fa-spin"></i>  Verifying barcodes...
                                 </div>
                             </div>
@@ -192,9 +192,12 @@ TARGET-51-PAJMFS,"", "TARGET"</pre>
                             <hr>
                             <h5>Barcode Entries</h5> <i>(Maximum length: 10000 characters)</i>
                             <textarea id="pasted-barcodes" maxlength="10000"></textarea>
-                            <p>
+                            <div class="block">
                                 <button class="btn btn-primary verify" title="Verify the barcode set">Verify</button>
-                            </p>
+                                <div class="collapse verify-pending" style="display: none;">
+                                    <i class="fa fa-circle-o-notch fa-spin"></i>  Verifying barcodes...
+                                </div>
+                            </div>
                             <div class="barcode-status" style="display: none;">
                                 <hr>
                                 <div class="valid-entries">
