-> Implementation of #1847 (+ TSV manifests)

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -489,6 +489,8 @@
             clear: both
     h5
         margin-top: 25px
+    h6
+        margin-top: 15px
     table
         width: 50%
     hr
