--- a/templates/cohorts/new_cohort_barcodes.html
+++ b/templates/cohorts/new_cohort_barcodes.html
@@ -112,7 +112,7 @@ TARGET-51-PAJMFS,"", "TARGET"</pre>
                             <hr>
                             <div id="uploadField" class="center" style="display : inline-block;">
                                 <button class="btn btn-link nocap" id="file-upload-btn">
-                                    <i class="fa fa-file"></i> Upload sample/case barcode list
+                                    <i class="fa fa-file"></i> Upload case manifest or barcode list
                                 </button>
                                 <input type="file" name="upload" id="file-upload-field" style="display: none">
                                 <div id="uploading" class="collapse" style="margin-left: 20px;">
