--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -248,26 +248,33 @@
                     </div>
                 </div>
                 <form id="export-cohort-form" method="POST" action="{% url 'export_cohort_to_bq' cohort.id %}">
+                    {% csrf_token %}
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="export-cohort-project-dataset">Choose a Project and Dataset:</label>
-                            <select id="export-cohort-project-dataset" class="form-control">
+                            <select id="export-cohort-project-dataset" name="project-dataset" class="form-control">
                                 <option value="" disabled selected type="label">Please select a project and dataset</option>
                             </select>
                         </div>
                         <div class="form-group">
                             <ul class="table-type">
                                 <div class="radio">
-                                    <label><input type="radio" name="table-type" value="new" checked> Make a new table</label>
+                                    <label><input class="table-type" type="radio" name="table-type" value="new" checked> Make a new table</label>
                                 </div>
                                 <div class="radio">
-                                    <label><input type="radio" name="table-type" value="append"> Append to an existing table</label>
+                                    <label title="Select a project and dataset to enable this option." disabled><input class="table-type" type="radio" name="table-type" value="append" disabled> Append to an existing table</label>
                                 </div>
                             </ul>
                         </div>
-                        <div class="form-group table-name" style="display: none;">
-                            <label for="table-name">Name:</label>
-                            <input class="form-control" type="text" id="table-name" name="name" />
+                        <div class="form-group table-list" style="display: none;">
+                            <label for="table-name">Choose a table:</label>
+                            <select id="export-cohort-table" name="table-name" class="form-control">
+                                <option value="" disabled selected type="label">Please select a table</option>
+                            </select>
+                        </div>
+                        <div class="form-group new-table-name" style="display: none;">
+                            <label for="new-table-name">Name:</label>
+                            <input class="form-control" type="text" id="table-name" name="new-table-name" />
                         </div>
                     </div>
                     <div class="modal-footer">
