-> Added ability to refresh a GCP, which will add any new users to its Web App registered list, if they are in the Web App

--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -143,7 +143,8 @@
 #gcp-detail
     h1.page-header
         text-transform: none
-
+    div.refresh-project
+        margin-top: 15px
     ul
         list-style: none
         li span.remove
