--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -258,12 +258,12 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <ul class="table-type" disabled title="Select a project and dataset to enable this option." >
-                                <div class="radio">
-                                    <label><input class="table-type" type="radio" name="table-type" value="new" disabled checked> Make a new table</label>
+                            <ul class="table-type" disabled>
+                                <div class="radio table-type">
+                                    <label class="table-type" title="Select a project and dataset to enable this option."><input class="table-type" type="radio" name="table-type" value="new" disabled checked> Make a new table</label>
                                 </div>
-                                <div class="radio">
-                                    <label><input class="table-type" type="radio" name="table-type" value="append" disabled> Append to an existing table</label>
+                                <div class="radio table-type">
+                                    <label class="table-type" title="Select a project and dataset to enable this option."><input class="table-type" type="radio" name="table-type" value="append" disabled> Append to an existing table</label>
                                 </div>
                             </ul>
                         </div>
@@ -273,9 +273,9 @@
                                 <option value="" disabled selected type="label">Please select a table</option>
                             </select>
                         </div>
-                        <div class="form-group new-table-name" title="Select a project and dataset to enable this option.">
+                        <div class="form-group new-table-name">
                             <label for="new-table-name">Name:</label>
-                            <input disabled class="form-control new-table-name" type="text" maxlength="1024" placeholder="If left blank, a table name will be provided." id="new-table-name" name="new-table-name" />
+                            <input title="Select a project and dataset to enable this option." disabled class="form-control new-table-name" type="text" maxlength="1024" placeholder="If left blank, a table name will be provided." id="new-table-name" name="new-table-name" />
                         </div>
                     </div>
                     <div class="modal-footer">
