--- a/templates/variables/variable_edit.html
+++ b/templates/variables/variable_edit.html
@@ -163,7 +163,7 @@
                                 {% for fav in favorite_list %}
                                     {% if fav.version == 'v2' %}
                                         <li class="list-group-item">
-                                        <div id="heading-{{ fav.name }}" data-field="{{ fav.name }}" class="list-group-item__heading">
+                                        <div id="heading-{{ fav.id }}" data-field="{{ fav.name }}" class="list-group-item__heading">
                                             <a role="button" data-toggle="collapse" data-parent="#clin-accordion" href="#collapse-{{ fav.id }}" aria-expanded="false" aria-controls="collapse-{{ fav.id }}">
                                                 <i class="fa fa-caret-right"></i><i class="fa fa-caret-down" style="display:none;"></i> {{ fav.name }}
                                             </a>
