--- a/templates/workbooks/workbook_modals.html
+++ b/templates/workbooks/workbook_modals.html
@@ -17,8 +17,8 @@
                     <label for="edit-workbook-name-{{ workbook.id }}">Name (required)</label>
                     <input id="edit-workbook-name-{{ workbook.id }}" class="edit-workbook-name form-control" type="text" name="name" maxlength="2000" value="{{ workbook.name }}" required/>
                     <br />
-                    <label for="workbook-build">Build</label>
-                    <select aria-label="Workbook Build" id="workbook-build" name="build" class="form-control workbook-build">
+                    <label for="workbook-build-{{ workbook.id }}">Build</label>
+                    <select aria-label="Workbook Build" id="workbook-build-{{ workbook.id }}" name="build" class="form-control workbook-build">
                         <option value="{% if not workbook.build %}legacy{% else %}{{ workbook.build }}{% endif %}"
                                 data-plot-version="{% if not workbook.build %}v1{% else %}v2{% endif %}" selected >{% if not workbook.build %}Legacy{% else %}{{ workbook.build }}{% endif %}</option>
                         {% for build in workbook.get_builds %}
