-> For #1980, more removal of len()

--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -191,7 +191,7 @@
             <div class="panel panel-default">
                 <ul class="nav nav-tabs nav-tabs-data" role="tablist">
                     {% for program in programs %}
-                         <li role="presentation" class="program-tab {% if program|program_is_first_in_cohort:cohort.get_programs %}active{% endif %} {% if not program|program_is_in_cohort:cohort.get_programs %}disabled{% endif %}"><a href="#{{ program.id }}-data" role="tab" data-toggle="tab" title="ISB-CGC Data" data-program-id="{{ program.id }}">{{ program.name }} Data</a></li>
+                         <li role="presentation" class="program-tab{% if not program|program_is_in_cohort:cohort.get_programs %} disabled{% elif program|program_is_first_in_cohort:cohort.get_programs %} active{% endif %}"><a href="#{{ program.id }}-data" role="tab" data-toggle="tab" title="ISB-CGC Data" data-program-id="{{ program.id }}">{{ program.name }} Data</a></li>
                     {% endfor %}
                     <li role="presentation" class="program-tab {% if cohort.get_programs|length <= 1 and cohort_programs|has_user_data %}active{% endif %} {% if not cohort_programs|has_user_data %}disabled{% endif %}"><a href="#0-data" role="tab" data-toggle="tab" title="User Data" data-program-id="0">User Data</a></li>
                 </ul>
