--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -116,8 +116,8 @@
 
 #register-gcp, #user-register-sa
     ul
-        list-style: circle
-        padding-left: 20px
+        list-style: none
+        padding-left: -15px
         li
             margin: 5px 0px
             img
@@ -136,9 +136,8 @@
         li.upper
             margin-bottom: 20px
 
-
-
-
+#datasets-select-div
+    margin-top: 15px
 
 #gcp-detail
     h1.page-header
